Fixed issues with spacing and Added url links

--- a/websitePortfolio2/main.css
+++ b/websitePortfolio2/main.css
@@ -21,7 +21,7 @@ html {
 body {
 	width: 60%;
 	margin: auto;
-	background-image: url(images/BG.png);
+	background-image: url(BG.png);
 	background-position: top;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -34,7 +34,7 @@ body {
 }
 h1 {
 	font-size: 60px;
-	font-weight: 550;
+	font-weight: 400;
 	color: #17191A;
 }
 h2 {
@@ -88,7 +88,7 @@ p {
 .landing {
 	height: 100vh;
 	position: relative;
-	margin-bottom: 6em;
+	margin-bottom: 4em;
 }
 .landingWrapper {
 	display: flex;
@@ -122,7 +122,7 @@ ul {
 /*-------- Skills --------*/
 .skills {
 	text-align: center;
-	margin-bottom: 25em;
+	margin-bottom: 30em;
 }
 .skills p {
 	margin-bottom: 30px;
@@ -209,7 +209,7 @@ ul {
 }
 .work > .workHeading {
 	position: absolute;
-	top: 0px;
+	top: -50px;
 }
 .work > .workHeading > .underline {
 	display: block;
@@ -224,7 +224,6 @@ ul {
 	-webkit-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 	-moz-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 	box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
-	margin-top: 50px;
 }
 .work ul {
 	position: absolute;
@@ -234,18 +233,15 @@ ul {
 .work ul li {
 	margin-top: 20px;
 }
-.work h5 {
-	font-size: 20px;
-	margin-top: 190px;
-	color: #17191A;
-}
 .work p {
+	position: absolute;
+	bottom: -10em;
+	right: 0;
 	color: #8F9EA5;
 	opacity: 0.8;
 	font-weight: 100;
 	font-size: 20px;
-	position: absolute;
-	margin-top: 370px; 
+	margin-top: 4em; 
 }
 
 
@@ -270,12 +266,11 @@ ul {
 	float: right;
 }
 .work2 > .workImg {
-	width: 70%;
+	width: 85%;
 	float: left;
 	-webkit-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 	-moz-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 	box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
-	margin-top: 50px;
 }
 .work2 ul {
 	position: absolute;
@@ -286,13 +281,14 @@ ul {
 	margin-top: 20px;
 }
 .work2 p {
+	position: absolute;
+	bottom: -6em;
+	left: 0;
 	color: #8F9EA5;
 	opacity: 0.8;
 	font-weight: 100;
 	font-size: 20px;
-	position: absolute;
-	margin-top: 300px;
-	margin-left: 120px; 
+	margin-top: 4em; 
 }
 
 
